qt/gen_qiodevice.nim


proc fcQIODevice_new(): ptr cQIODevice {.importc: "QIODevice_new".}
proc fcQIODevice_new2(parent: pointer): ptr cQIODevice {.importc: "QIODevice_new2".}
proc fcQIODevice_metaObject(self: pointer, ): pointer {.importc: "QIODevice_metaObject".}
proc fcQIODevice_metacast(self: pointer, param1: cstring): pointer {.importc: "QIODevice_metacast".}
proc fcQIODevice_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QIODevice_metacall".}
proc fcQIODevice_tr(s: cstring): struct_miqt_string {.importc: "QIODevice_tr".}
proc fcQIODevice_trUtf8(s: cstring): struct_miqt_string {.importc: "QIODevice_trUtf8".}
proc fcQIODevice_openMode(self: pointer, ): cint {.importc: "QIODevice_openMode".}
proc fcQIODevice_setTextModeEnabled(self: pointer, enabled: bool): void {.importc: "QIODevice_setTextModeEnabled".}
proc fcQIODevice_isTextModeEnabled(self: pointer, ): bool {.importc: "QIODevice_isTextModeEnabled".}
proc fcQIODevice_isOpen(self: pointer, ): bool {.importc: "QIODevice_isOpen".}
proc fcQIODevice_isReadable(self: pointer, ): bool {.importc: "QIODevice_isReadable".}
proc fcQIODevice_isWritable(self: pointer, ): bool {.importc: "QIODevice_isWritable".}
proc fcQIODevice_isSequential(self: pointer, ): bool {.importc: "QIODevice_isSequential".}
proc fcQIODevice_readChannelCount(self: pointer, ): cint {.importc: "QIODevice_readChannelCount".}
proc fcQIODevice_writeChannelCount(self: pointer, ): cint {.importc: "QIODevice_writeChannelCount".}
proc fcQIODevice_currentReadChannel(self: pointer, ): cint {.importc: "QIODevice_currentReadChannel".}
proc fcQIODevice_setCurrentReadChannel(self: pointer, channel: cint): void {.importc: "QIODevice_setCurrentReadChannel".}
proc fcQIODevice_currentWriteChannel(self: pointer, ): cint {.importc: "QIODevice_currentWriteChannel".}
proc fcQIODevice_setCurrentWriteChannel(self: pointer, channel: cint): void {.importc: "QIODevice_setCurrentWriteChannel".}
proc fcQIODevice_open(self: pointer, mode: cint): bool {.importc: "QIODevice_open".}
proc fcQIODevice_close(self: pointer, ): void {.importc: "QIODevice_close".}
proc fcQIODevice_pos(self: pointer, ): clonglong {.importc: "QIODevice_pos".}
proc fcQIODevice_size(self: pointer, ): clonglong {.importc: "QIODevice_size".}
proc fcQIODevice_seek(self: pointer, pos: clonglong): bool {.importc: "QIODevice_seek".}
proc fcQIODevice_atEnd(self: pointer, ): bool {.importc: "QIODevice_atEnd".}
proc fcQIODevice_reset(self: pointer, ): bool {.importc: "QIODevice_reset".}
proc fcQIODevice_bytesAvailable(self: pointer, ): clonglong {.importc: "QIODevice_bytesAvailable".}
proc fcQIODevice_bytesToWrite(self: pointer, ): clonglong {.importc: "QIODevice_bytesToWrite".}
proc fcQIODevice_read(self: pointer, data: cstring, maxlen: clonglong): clonglong {.importc: "QIODevice_read".}
proc fcQIODevice_readWithMaxlen(self: pointer, maxlen: clonglong): struct_miqt_string {.importc: "QIODevice_readWithMaxlen".}
proc fcQIODevice_readAll(self: pointer, ): struct_miqt_string {.importc: "QIODevice_readAll".}
proc fcQIODevice_readLine(self: pointer, data: cstring, maxlen: clonglong): clonglong {.importc: "QIODevice_readLine".}
proc fcQIODevice_readLine2(self: pointer, ): struct_miqt_string {.importc: "QIODevice_readLine2".}
proc fcQIODevice_canReadLine(self: pointer, ): bool {.importc: "QIODevice_canReadLine".}
proc fcQIODevice_startTransaction(self: pointer, ): void {.importc: "QIODevice_startTransaction".}
proc fcQIODevice_commitTransaction(self: pointer, ): void {.importc: "QIODevice_commitTransaction".}
proc fcQIODevice_rollbackTransaction(self: pointer, ): void {.importc: "QIODevice_rollbackTransaction".}
proc fcQIODevice_isTransactionStarted(self: pointer, ): bool {.importc: "QIODevice_isTransactionStarted".}
proc fcQIODevice_write(self: pointer, data: cstring, len: clonglong): clonglong {.importc: "QIODevice_write".}
proc fcQIODevice_writeWithData(self: pointer, data: cstring): clonglong {.importc: "QIODevice_writeWithData".}
proc fcQIODevice_write2(self: pointer, data: struct_miqt_string): clonglong {.importc: "QIODevice_write2".}
proc fcQIODevice_peek(self: pointer, data: cstring, maxlen: clonglong): clonglong {.importc: "QIODevice_peek".}
proc fcQIODevice_peekWithMaxlen(self: pointer, maxlen: clonglong): struct_miqt_string {.importc: "QIODevice_peekWithMaxlen".}
proc fcQIODevice_skip(self: pointer, maxSize: clonglong): clonglong {.importc: "QIODevice_skip".}
proc fcQIODevice_waitForReadyRead(self: pointer, msecs: cint): bool {.importc: "QIODevice_waitForReadyRead".}
proc fcQIODevice_waitForBytesWritten(self: pointer, msecs: cint): bool {.importc: "QIODevice_waitForBytesWritten".}
proc fcQIODevice_ungetChar(self: pointer, c: cchar): void {.importc: "QIODevice_ungetChar".}
proc fcQIODevice_putChar(self: pointer, c: cchar): bool {.importc: "QIODevice_putChar".}
proc fcQIODevice_getChar(self: pointer, c: cstring): bool {.importc: "QIODevice_getChar".}
proc fcQIODevice_errorString(self: pointer, ): struct_miqt_string {.importc: "QIODevice_errorString".}
proc fcQIODevice_readyRead(self: pointer, ): void {.importc: "QIODevice_readyRead".}
proc fQIODevice_connect_readyRead(self: pointer, slot: int) {.importc: "QIODevice_connect_readyRead".}
proc fcQIODevice_channelReadyRead(self: pointer, channel: cint): void {.importc: "QIODevice_channelReadyRead".}
proc fQIODevice_connect_channelReadyRead(self: pointer, slot: int) {.importc: "QIODevice_connect_channelReadyRead".}
proc fcQIODevice_bytesWritten(self: pointer, bytes: clonglong): void {.importc: "QIODevice_bytesWritten".}
proc fQIODevice_connect_bytesWritten(self: pointer, slot: int) {.importc: "QIODevice_connect_bytesWritten".}
proc fcQIODevice_channelBytesWritten(self: pointer, channel: cint, bytes: clonglong): void {.importc: "QIODevice_channelBytesWritten".}
proc fQIODevice_connect_channelBytesWritten(self: pointer, slot: int) {.importc: "QIODevice_connect_channelBytesWritten".}
proc fcQIODevice_aboutToClose(self: pointer, ): void {.importc: "QIODevice_aboutToClose".}
proc fQIODevice_connect_aboutToClose(self: pointer, slot: int) {.importc: "QIODevice_connect_aboutToClose".}
proc fcQIODevice_readChannelFinished(self: pointer, ): void {.importc: "QIODevice_readChannelFinished".}
proc fQIODevice_connect_readChannelFinished(self: pointer, slot: int) {.importc: "QIODevice_connect_readChannelFinished".}
proc fcQIODevice_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QIODevice_tr2".}
proc fcQIODevice_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QIODevice_tr3".}
proc fcQIODevice_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QIODevice_trUtf82".}
proc fcQIODevice_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QIODevice_trUtf83".}
proc fcQIODevice_readLine1(self: pointer, maxlen: clonglong): struct_miqt_string {.importc: "QIODevice_readLine1".}
proc fQIODevice_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QIODevice_virtualbase_metacall".}
proc fcQIODevice_override_virtual_metacall(self: pointer, slot: int) {.importc: "QIODevice_override_virtual_metacall".}
proc fQIODevice_virtualbase_isSequential(self: pointer, ): bool{.importc: "QIODevice_virtualbase_isSequential".}
proc fcQIODevice_override_virtual_isSequential(self: pointer, slot: int) {.importc: "QIODevice_override_virtual_isSequential".}
proc fQIODevice_virtualbase_open(self: pointer, mode: cint): bool{.importc: "QIODevice_virtualbase_open".}
proc fcQIODevice_override_virtual_open(self: pointer, slot: int) {.importc: "QIODevice_override_virtual_open".}
proc fQIODevice_virtualbase_close(self: pointer, ): void{.importc: "QIODevice_virtualbase_close".}
proc fcQIODevice_override_virtual_close(self: pointer, slot: int) {.importc: "QIODevice_override_virtual_close".}
proc fQIODevice_virtualbase_pos(self: pointer, ): clonglong{.importc: "QIODevice_virtualbase_pos".}
proc fcQIODevice_override_virtual_pos(self: pointer, slot: int) {.importc: "QIODevice_override_virtual_pos".}
proc fQIODevice_virtualbase_size(self: pointer, ): clonglong{.importc: "QIODevice_virtualbase_size".}
proc fcQIODevice_override_virtual_size(self: pointer, slot: int) {.importc: "QIODevice_override_virtual_size".}
proc fQIODevice_virtualbase_seek(self: pointer, pos: clonglong): bool{.importc: "QIODevice_virtualbase_seek".}
proc fcQIODevice_override_virtual_seek(self: pointer, slot: int) {.importc: "QIODevice_override_virtual_seek".}
proc fQIODevice_virtualbase_atEnd(self: pointer, ): bool{.importc: "QIODevice_virtualbase_atEnd".}
proc fcQIODevice_override_virtual_atEnd(self: pointer, slot: int) {.importc: "QIODevice_override_virtual_atEnd".}
proc fQIODevice_virtualbase_reset(self: pointer, ): bool{.importc: "QIODevice_virtualbase_reset".}
proc fcQIODevice_override_virtual_reset(self: pointer, slot: int) {.importc: "QIODevice_override_virtual_reset".}
proc fQIODevice_virtualbase_bytesAvailable(self: pointer, ): clonglong{.importc: "QIODevice_virtualbase_bytesAvailable".}
proc fcQIODevice_override_virtual_bytesAvailable(self: pointer, slot: int) {.importc: "QIODevice_override_virtual_bytesAvailable".}
proc fQIODevice_virtualbase_bytesToWrite(self: pointer, ): clonglong{.importc: "QIODevice_virtualbase_bytesToWrite".}
proc fcQIODevice_override_virtual_bytesToWrite(self: pointer, slot: int) {.importc: "QIODevice_override_virtual_bytesToWrite".}
proc fQIODevice_virtualbase_canReadLine(self: pointer, ): bool{.importc: "QIODevice_virtualbase_canReadLine".}
proc fcQIODevice_override_virtual_canReadLine(self: pointer, slot: int) {.importc: "QIODevice_override_virtual_canReadLine".}
proc fQIODevice_virtualbase_waitForReadyRead(self: pointer, msecs: cint): bool{.importc: "QIODevice_virtualbase_waitForReadyRead".}
proc fcQIODevice_override_virtual_waitForReadyRead(self: pointer, slot: int) {.importc: "QIODevice_override_virtual_waitForReadyRead".}
proc fQIODevice_virtualbase_waitForBytesWritten(self: pointer, msecs: cint): bool{.importc: "QIODevice_virtualbase_waitForBytesWritten".}
proc fcQIODevice_override_virtual_waitForBytesWritten(self: pointer, slot: int) {.importc: "QIODevice_override_virtual_waitForBytesWritten".}
proc fcQIODevice_override_virtual_readData(self: pointer, slot: int) {.importc: "QIODevice_override_virtual_readData".}
proc fQIODevice_virtualbase_readLineData(self: pointer, data: cstring, maxlen: clonglong): clonglong{.importc: "QIODevice_virtualbase_readLineData".}
proc fcQIODevice_override_virtual_readLineData(self: pointer, slot: int) {.importc: "QIODevice_override_virtual_readLineData".}
proc fcQIODevice_override_virtual_writeData(self: pointer, slot: int) {.importc: "QIODevice_override_virtual_writeData".}
proc fQIODevice_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QIODevice_virtualbase_event".}
proc fcQIODevice_override_virtual_event(self: pointer, slot: int) {.importc: "QIODevice_override_virtual_event".}
proc fQIODevice_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QIODevice_virtualbase_eventFilter".}
proc fcQIODevice_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QIODevice_override_virtual_eventFilter".}
proc fQIODevice_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QIODevice_virtualbase_timerEvent".}
proc fcQIODevice_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QIODevice_override_virtual_timerEvent".}
proc fQIODevice_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QIODevice_virtualbase_childEvent".}
proc fcQIODevice_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QIODevice_override_virtual_childEvent".}
proc fQIODevice_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QIODevice_virtualbase_customEvent".}
proc fcQIODevice_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QIODevice_override_virtual_customEvent".}
